Fixed too high weather icon width.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,6 +90,6 @@ body{
 }
 
 .weather-img{
-    width: 25%;
+    width: 20%;
     margin: auto;
 }
